--- a/main/app/templates/index.html
+++ b/main/app/templates/index.html
@@ -1,3 +1,20 @@
+<!-- <!doctype html>
+<html>
+    <head>
+        <title>Home page</title>
+        </head>
+    <body>
+        <h1>Homepage</h1>
+        {% for x in range(10) %}
+            {% if x%2 == 1%}
+                <p>{{x}}</p>
+            {% endif %}
+        {% endfor %}
+        
+    </body>
+</html> -->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
